# Numerical-Methods

./: .bazelignore  .bazelrc  .clang-tidy  .gitignore  BUILD  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  bazel-Numerical-Methods  bazel-bin  bazel-out  bazel-testlogs  compile_commands.json  jobs.yaml  zuul.yaml
.cache/clangd/index/: __sigval_t.h.4EE558E3F2780E3A.idx  alloc_traits.h.13D1B38B073CCF12.idx  alloc_traits.h.E429CD30034E465D.idx  alloca.h.B3C3404035C15EA6.idx  allocated_ptr.h.AB57E492BDF2A2B8.idx  allocator.h.007AC0B614B681A6.idx  array.661D83F8EAEC6A2D.idx  assert.h.F44EF353D67C7E11.idx  atomic.46043D485DA73C17.idx  atomic_base.h.3A2E72751505F214.idx  auto_ptr.h.2B81CF3770636FDE.idx  basic_ios.h.38A1B1E0E5B4EA7D.idx  basic_ios.tcc.0E9A74F4860B5F2E.idx  binders.h.6BDD7FC84C0C14C1.idx  c++locale.h.C350DFB87F50625F.idx  (+221 more)
.github/workflows/: bazel_build_and_test.yml  bazel_build_and_test_macos.yml  bazelbuild-and-test.yml  clang-linter.yml  clang-linter.yml~  issue_ci.yml  main_ci.yml  small_checks.yml
Backwards-Substitution/src/: backwards-substitution.cpp  backwards-substitution.cpp~  backwards_substitution.cpp  backwards_substitution.h
Backwards-Substitution/test/: backwards_substitution_test.cpp
Newtons-Method/src/: BUILD  newtons_method.cpp  newtons_method.h
Newtons-Method/test/: BUILD  newtons_method_test.cpp
bazel/toolchains/: BUILD
bazel/toolchains/gcc12/: BUILD  BUILD.bazel  linux_x86_64_toolchain_config.bzl  osx_aarch64_toolchain_config.bzl  osx_x86_64_toolchain_config.bzl
bazel/toolchains/gcc9/: BUILD  BUILD.bazel  gcc9_toolchain_config.bzl  linux_x86_64_toolchain_config.bzl
bazel/toolchains/openmpi/: BUILD.bazel  linux_x86_64_toolchain_config.bzl  macos_aarch64_toolchain_config.bzl
calculus/data_types/: BUILD.bazel  data_types.h
calculus/data_types/test/: BUILD.bazel  data_types_tests.cpp
calculus/forward_mode_auto_differentiation/: forward_mode_auto_differentiation.cpp  forward_mode_auto_differentiation.h
calculus/forward_mode_auto_differentiation/test/: BUILD.bazel  forward_mode_auto_differentiation_tests.cpp
calculus/integration/: BUILD.bazel  CMakeLists.txt
calculus/integration/simpsons_method/: simpsons_method.cpp  simpsons_method.h
calculus/integration/test/: BUILD.bazel  quadrature_methods_tests.cpp
calculus/integration/trapezoidal_method/: trapezoidal_method.cpp  trapezoidal_method.h
controls/lqr/: BUILD.bazel  newton_kleinman.cpp  newton_kleinman.h
controls/lqr/test/: lqr_tests.cpp
curve_fitting/: BUILD.bazel
curve_fitting/polynomial_regression/: cholesky_regression.cpp  cholesky_regression.h
curve_fitting/polynomial_regression/test/: BUILD.bazel  polynomial_regression_tests.cpp
matrix_solvers/: BUILD  BUILD.bazel  CMakeLists.txt  utilities.cpp  utilities.h  utilities_tests.cpp  utilities_tests.h
matrix_solvers/decomposition_methods/: BUILD.bazel  doolittle.cpp  doolittle.h  lu_decomposition.cpp  lu_decomposition.h  qr_decomposition.cpp  qr_decomposition.h
matrix_solvers/decomposition_methods/test/: BUILD.bazel  decomposition_method_tests.cpp  decomposition_methods_tests.cpp
matrix_solvers/direct_solvers/: BUILD  BUILD.bazel  backwards_substitution.cpp  backwards_substitution.h  doolittle.cpp  doolittle.h  forward_substitution.cpp  forward_substitution.h  lu_solve.cpp  lu_solve.h
matrix_solvers/direct_solvers/test/: BUILD  BUILD.bazel  backwards_substitution_test.cpp  direct_solver_tests.cpp  direct_solvers_tests.cpp
matrix_solvers/iterative_solvers/: BUILD  BUILD.bazel  conjugate_gradient.cpp  conjugate_gradient.h  gauss_seidel.cpp  gauss_seidel.h  jacobi.cpp  jacobi.h
matrix_solvers/iterative_solvers/jacobi_mpi/: BUILD.bazel  jacobi.cc  jacobi.h  main.cc  run_main.sh  utils.cc  utils.h
matrix_solvers/iterative_solvers/test/: BUILD  BUILD.bazel  iterative_solver_tests.cpp  jacobi_solver_tests.cpp
matrix_solvers/operations/: operations.cpp  operations.h  operations_tests.cpp
monte_carlo/: BUILD.bazel  correlation.cpp  correlation_induction.py  vacation_budget.py
optimization/: CMakeLists.txt
optimization/ternary/: BUILD.bazel  ternary.cpp  ternary.h
optimization/ternary/test/: BUILD  BUILD.bazel  ternary_search_tests.cpp
pde_solver/: BUILD.bazel  main_solver.cpp  main_solver.h
pde_solver/data_types/: BUILD.bazel  discretization_methods.h  finite_difference_schemas.h  grid.cpp  grid.h  spatial_variable.cpp  spatial_variable.h  time_variable.cpp  time_variable.h
pde_solver/data_types/test/: BUILD.bazel  grid_tests.cpp  spatial_variable_tests.cpp  time_variable_tests.cpp
pde_solver/operators/: BUILD.bazel  gradient.cpp  gradient.h  laplace.cpp  laplace.h
pde_solver/operators/test/: BUILD.bazel  gradient_operator_tests.cpp  laplace_operator_tests.cpp
pde_solver/test/: BUILD.bazel  linear_advection_tests.cpp  linear_diffusion_tests.cpp  ss_linear_gradient_tests.cpp  ss_linear_laplace_tests.cpp
pde_solver/utilities/: BUILD.bazel  grid_generator.cpp  grid_generator.h
pde_solver/utilities/test/: BUILD.bazel  grid_tests.cpp
playbooks/: install_bazel.yaml  testjob.yaml
probability_and_stats/data_types/: BUILD.bazel  normally_distributed_value.h  uniformly_distributed_value.cpp  uniformly_distributed_value.h
probability_and_stats/data_types/test/: BUILD.bazel  normally_distributed_value_tests.cpp  uniformly_distributed_value_tests.cpp
root_finders/: BUILD  BUILD.bazel  CMakeLists.txt  functions.h  newtons_method.cpp  newtons_method.h
root_finders/bisection_method/: bisection_method.cpp  bisection_method.h
root_finders/broydens_method/: broydens_method.cpp  broydens_method.h
root_finders/secant_method/: multivar_secant_method.cpp  multivar_secant_method.h  secant_method.cpp  secant_method.h
root_finders/test/: BUILD  BUILD.bazel  bisection_method_tests.cpp  broydens_method_tests.cpp  multivar_secant_method_tests.cpp  newtons_method_test.cpp  newtons_method_tests.cpp  secant_method_tests.cpp
toolchain/: BUILD  cc_toolchain_config.bzl  clang13_toolchain_config.bzl  gcc_toolchain_config.bzl
zuul.d/: .zuul.yaml  jobs.yaml  zuul.yaml
(+18 files in other folders)
