load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

refresh_compile_commands(
    name = "refresh_cuda_commands",
    targets = {
        "//:my_output_1": "--important_flag1 --important_flag2=true",
    },
)

bool_flag(
    name = "print_debug_info_flag",
    build_setting_default = False,
)

config_setting(
    name = "print_debug_info",
    flag_values = {
        ":print_debug_info_flag": "True",
    },
)
