load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

refresh_compile_commands(
    name = "refresh_cuda_commands",
    targets = {
        "//...": "--@rules_cuda//cuda:archs=compute_75:compute_75,sm_75",
    },
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//pde_solver/...": "--config=clang18_macos_aarch64",
        "//matrix_solvers:all": "--config=clang18_macos_aarch64",
        "//matrix_solvers/direct_solvers/...": "--config=clang18_macos_aarch64",
        "//matrix_solvers/iterative_solvers:all": "--config=clang18_macos_aarch64",
        "//matrix_solvers/iterative_solvers/test:all": "--config=clang18_macos_aarch64",
        "//optimization/...": "--config=clang18_macos_aarch64",
        "//controls/...": "--config=clang18_macos_aarch64",
    },
)

bool_flag(
    name = "print_debug_info_flag",
    build_setting_default = False,
)

config_setting(
    name = "print_debug_info",
    flag_values = {
        ":print_debug_info_flag": "True",
    },
)
