"""
Module
"""
module(
    name = "numerical_methods",
    version = "0.0.1",
)

bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "gazelle_cc", version = "0.1.0")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "nlohmann_json", version = "3.12.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.5.0")

# Hedron's Compile Commands Extractor for Bazel
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)
