load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "vacation_budget",
    srcs = ["vacation_budget.py"],
    deps = [
        "@pypi//matplotlib",
        "@pypi//numpy",
    ],
)

py_binary(
    name = "correlation_induction",
    srcs = ["correlation_induction.py"],
    deps = [
        "@pypi//matplotlib",
        "@pypi//numpy",
        "@pypi//pandas",
        "@pypi//scipy",
    ],
)
