load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "vacation_budget",
    srcs = ["vacation_budget.py"],
    deps = [
        "@pypi//matplotlib",
        "@pypi//numpy",
    ],
)

py_binary(
    name = "correlation_induction",
    srcs = ["correlation_induction.py"],
    deps = [
        "@pypi//matplotlib",
        "@pypi//numpy",
        "@pypi//pandas",
        "@pypi//scipy",
    ],
)

cc_binary(
    name = "correlation",
    srcs = ["correlation.cpp"],
    deps = [
        "//matrix_solvers:utilities",
    ],
)
