load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "newtons_method",
    srcs = ["newtons_method.cpp"],
    hdrs = ["newtons_method.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bisection_method",
    srcs = ["bisection_method/bisection_method.cpp"],
    hdrs = ["bisection_method/bisection_method.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "secant_method",
    srcs = ["secant_method/secant_method.cpp"],
    hdrs = ["secant_method/secant_method.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "multivar_secant_method",
    srcs = ["secant_method/multivar_secant_method.cpp"],
    hdrs = ["secant_method/multivar_secant_method.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//matrix_solvers:operations",
        "//matrix_solvers:utilities",
        "//matrix_solvers/direct_solvers:lu_solve",
    ],
)
