"""
BUILD file for direct solvers of the matrix solver namespace
"""

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "lu_decomposition",
    srcs = ["lu_decomposition.cpp"],
    hdrs = ["lu_decomposition.h"],
    visibility = ["//visibility:public"],
    deps = ["//matrix_solvers:utilities"],
)

cc_library(
    name = "qr_decomposition",
    srcs = ["qr_decomposition.cpp"],
    hdrs = ["qr_decomposition.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//matrix_solvers:operations",
        "//matrix_solvers:utilities",
    ],
)
