"""
BUILD file for the C++ data types library.
"""

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "grid",
    srcs = ["grid.cpp"],
    hdrs = ["grid.h"],
)

cc_library(
    name = "discretization_lib",
    hdrs = [
        "discretization_methods.h",
        "finite_difference_schemas.h",
    ],
)

cc_library(
    name = "spatial_variable",
    srcs = ["spatial_variable.cpp"],
    hdrs = ["spatial_variable.h"],
    deps = [
        ":discretization_lib",
        ":grid",
        "//matrix_solvers:utilities",
        "//matrix_solvers/direct_solvers:lu_solve",
        "//matrix_solvers/iterative_solvers:conjugate_gradient_method",
        "//matrix_solvers/iterative_solvers:gauss_seidel_method",
        "//matrix_solvers/iterative_solvers:jacobi_method",
    ],
)

cc_library(
    name = "time_variable",
    srcs = ["time_variable.cpp"],
    hdrs = ["time_variable.h"],
    deps = [
        ":spatial_variable",
        "//matrix_solvers:operations",
    ],
)
