"""
This file contains the Bazel build rules for the various cfd operators.
"""

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "laplace",
    srcs = ["laplace.cpp"],
    hdrs = ["laplace.h"],
    deps = [
        "//matrix_solvers:utilities",
        "//pde_solver/data_types:spatial_variable",
    ],
)

cc_library(
    name = "gradient",
    srcs = ["gradient.cpp"],
    hdrs = ["gradient.h"],
    deps = [
        "//matrix_solvers:utilities",
        "//pde_solver/data_types:spatial_variable",
    ],
)
