load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "newtons_method_tests",
    srcs = ["newtons_method_tests.cpp"],
    deps = [
        "//root_finders:newtons_method",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "bisection_method_tests",
    srcs = ["bisection_method_tests.cpp"],
    deps = [
        "//root_finders:bisection_method",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "secant_method_tests",
    srcs = ["secant_method_tests.cpp"],
    deps = [
        "//root_finders:secant_method",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "multivar_secant_method_tests",
    srcs = ["multivar_secant_method_tests.cpp"],
    deps = [
        "//root_finders:multivar_secant_method",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "broydens_method_tests",
    srcs = ["broydens_method_tests.cpp"],
    deps = [
        "//root_finders:broydens_method",
        "@googletest//:gtest_main",
    ],
)
