load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

cc_library(
    name = "jacobi",
    srcs = ["jacobi.cc"],
    hdrs = ["jacobi.h"],
)

cc_library(
    name = "utils",
    srcs = ["utils.cc"],
    hdrs = ["utils.h"],
)

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    deps = [
        ":jacobi",
        ":utils",
    ],
)

sh_binary(
    name = "run_main",
    srcs = ["run_main.sh"],
    data = [":main"],
    visibility = ["//visibility:public"],
)
