cc_test(
    name = "iterative_solver_tests",
    srcs = ["iterative_solver_tests.cpp"],
    deps = [
        "//matrix_solvers:utilities",
        "//matrix_solvers/iterative_solvers:conjugate_gradient_method",
        "//matrix_solvers/iterative_solvers:gauss_seidel_method",
        "//matrix_solvers/iterative_solvers:jacobi_method",
        "@googletest//:gtest_main",
    ],
)
